(fix): css to allow for tooltip overflow

--- a/src/app/modules/analytics/v2/components/metrics/metrics.component.scss
+++ b/src/app/modules/analytics/v2/components/metrics/metrics.component.scss
@@ -65,7 +65,7 @@ m-analytics__metrics {
 }
 .metricsWrapper {
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
   width: 100%;
   @include m-theme() {
     box-shadow: 0 7px 15px -7px rgba(themed($m-black-always), 0.1);
@@ -76,7 +76,7 @@ m-analytics__metrics {
   position: relative;
   display: flex;
   flex-wrap: nowrap;
-  overflow-x: auto;
+  // overflow-x: auto;
 
   // padding: 0 16px;
 
